--- a/make-your-challenge/src/App.css
+++ b/make-your-challenge/src/App.css
@@ -23,13 +23,6 @@ body {
   background-color: #fcfcfc;
 }
 
-.wrap {
-  min-height: 100vh;
-  display: grid;
-  place-content: center;
-  text-align: center;
-}
-
 button {
   height: 45px;
   padding: 0 1.5rem;
@@ -38,6 +31,7 @@ button {
   border-radius: 5px;
   transition: all 0.35s cubic-bezier(0.39, 0.5, 0.15, 1.36);
 }
+
 input {
   width: 100%;
   height: 45px;
@@ -58,6 +52,16 @@ input::placeholder {
   color: #bebebe;
 }
 
+li {
+  list-style-type: none;
+}
+
+.wrap {
+  min-height: 100vh;
+  display: grid;
+  place-content: center;
+  text-align: center;
+}
 .hidden {
   display: none;
 }
