--- a/make-your-challenge/src/App.css
+++ b/make-your-challenge/src/App.css
@@ -35,6 +35,7 @@ button {
 input {
   width: 100%;
   height: 45px;
+  margin-bottom: 1rem;
   line-height: 45px;
   border: none;
   border-radius: 0;
@@ -54,14 +55,4 @@ input::placeholder {
 
 li {
   list-style-type: none;
-}
-
-.wrap {
-  min-height: 100vh;
-  display: grid;
-  place-content: center;
-  text-align: center;
-}
-.hidden {
-  display: none;
 }
