--- a/make-your-challenge/src/App.css
+++ b/make-your-challenge/src/App.css
@@ -1,12 +1,4 @@
 @font-face {
-  font-family: "KOTRAHOPE";
-  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2110@1.0/KOTRAHOPE.woff2")
-    format("woff2");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
   font-family: "NanumSquareRound";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/NanumSquareRound.woff")
     format("woff");
@@ -14,12 +6,18 @@
   font-style: normal;
 }
 
-* {
-  font-family: "NanumSquareRound";
-  color: #011126;
+@font-face {
+  font-family: "BMJUA";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMJUA.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
+html,
 body {
+  font-family: "NanumSquareRound";
+  color: #011126;
   background-color: #fcfcfc;
 }
 
