--- a/make-your-challenge/src/App.css
+++ b/make-your-challenge/src/App.css
@@ -35,6 +35,7 @@ input {
   height: 45px;
   margin-bottom: 1rem;
   line-height: 45px;
+  box-sizing: border-box;
   border: none;
   border-radius: 0;
   border-bottom: 2px solid #bebebe;
